--- a/A.tex
+++ b/A.tex
@@ -126,3 +126,11 @@
     \item Generality
     \item Validation
 \end{itemize}
+
+\section{Model Applications}
+
+\begin{itemize}
+	\item Understanding physiological phenomena
+	\item Closed-loop testing
+	\item Closed-loop model checking
+\end{itemize}
