--- a/C.tex
+++ b/C.tex
@@ -13,7 +13,7 @@ In the following sections, we briefly discuss our model identification effort fo
 \section{Heart Model Identification for Closed-loop Simulation}
 In closed-loop simulation, a heart model should be identified to represent a specific patient under certain heart condition. The constraints for model parameters can be obtained from patient data during \emph{ElectroPhysiological (EP) Testing}. During EP testing, the physicians deliver electrical pacing sequence from electrodes placed inside the patient's heart while extracting timing parameters from observed pattern and timing of electrical events. Since the goal for any EP testing procedure is not to determine all the timing parameters for a patient, the amount of parameters that can be identified from the patient data is limited.    
 
-\figref{modelID} illustrates how timing parameters can be extracted during an EP testing procedure. Assume that there are two electrodes placed in the right atrium and right ventricle of the heart respectively (\figref{modelID}.a), and EGM signals can be measured (\figref{modelID}.b). The physician can also apply pacing sequences through the electrodes which can trigger different response from the patient's heart. Key parameters of the heart can be extracted by analyzing the \emph{timing} and \emph{pattern} of the local activations and be used to identify the heart model. \figref{modelID}.c shows a heart model strucure 
+\figref{modelID} illustrates how timing parameters can be extracted during an EP testing procedure. Assume that there are two electrodes placed in the right atrium and right ventricle of the heart respectively (\figref{modelID}.a), and EGM signals can be measured (\figref{modelID}.b). The physician can also apply pacing sequences through the electrodes which can trigger different response from the patient's heart. \figref{modelID}.c shows a heart model structure with unknown parameter values, which can be extracted by analyzing the \emph{timing} and \emph{pattern} of the local activations. 
 \begin{figure}[!t]
 \centering
 		\includegraphics[width=0.9  \textwidth]{figs/modelID.png}
