--- a/C.tex
+++ b/C.tex
@@ -9,11 +9,6 @@
 Physiological models are developed to represent certain physiological condition in general, or the physiological condition of a specific patient. Therefore the structure of the model and corresponding parameters have to be identified. These information can be obtained from physiological data, which are from: 1) data collected during physiological procedures, and/or 2) physiological literature in which physiological data are analyzed and summarized. Due to limitation on the interactions with the patient, the availability and quality of physiological data are generally bad and there are not enough information to identify all the parameters in the model. It is essential to choose the right level of abstraction so that the model is identifiable (to a large extend). Having physiological correspondence for the model structure and parameters can also simplify the identification process. The rigorousness of the model identification step is also an important factor for the validity of the model. 
 
 In the following sections, we briefly discuss our model identification effort for heart models used in two closed-loop verification applications, and their corresponding challenges. 
-
-\section{Heart Model Identification for Closed-loop Simulation}
-In closed-loop simulation, a heart model should be identified to represent a specific patient under certain heart condition. The constraints for model parameters can be obtained from patient data during \emph{ElectroPhysiological (EP) Testing}. During EP testing, the physicians deliver electrical pacing sequence from electrodes placed inside the patient's heart while extracting timing parameters from observed pattern and timing of electrical events. Since the goal for any EP testing procedure is not to determine all the timing parameters for a patient, the amount of parameters that can be identified from the patient data is limited.    
-
-\figref{modelID} illustrates how timing parameters can be extracted during an EP testing procedure. Assume that there are two electrodes placed in the right atrium and right ventricle of the heart respectively (\figref{modelID}.a), and EGM signals can be measured (\figref{modelID}.b). The physician can also apply pacing sequences through the electrodes which can trigger different response from the patient's heart. \figref{modelID}.c shows a heart model structure with unknown parameter values, which can be extracted by analyzing the \emph{timing} and \emph{pattern} of the local activations. 
 \begin{figure}[!t]
 \centering
 		\includegraphics[width=0.9  \textwidth]{figs/modelID.png}
@@ -23,6 +18,20 @@ In closed-loop simulation, a heart model should be identified to represent a spe
 \label{fig:modelID}
 %\vspace{-15pt}
 \end{figure} 
+
+\section{Heart Model Identification for Closed-loop Simulation}
+In closed-loop simulation, a heart model should be identified to represent a specific patient under certain heart condition. The constraints for model parameters can be obtained from patient data during \emph{ElectroPhysiological (EP) Testing}. During EP testing, the physicians deliver electrical pacing sequence from electrodes placed inside the patient's heart while extracting timing parameters from observed pattern and timing of electrical events. Since the goal for any EP testing procedure is not to determine all the timing parameters for a patient, the amount of parameters that can be identified from the patient data is limited.    
+
+\figref{modelID} illustrates how timing parameters can be extracted during an EP testing procedure. \figref{modelID}.a shows a setup with two electrodes placed in the right atrium and right ventricle of the heart respectively. EGM signals can be measured from these two electrodes (\figref{modelID}.b). The physician can also apply pacing sequences through the electrodes which can trigger different response from the patient's heart. \figref{modelID}.c shows a heart model structure with unknown parameter values. By analyzing the \emph{timing} and \emph{pattern} of the EGM signals we can extract constraints on the parameters. In EGM sequence 1, the interval between two intrinsic activations $a1$ and $a2$ in EGM A is 700ms, so we have:
+$$ERP1+RRP1+Rest=700ms$$
+The interval between $a1$ and $v1$ is 150ms, so we have:
+$$Td1+Td2=150ms$$
+In EGM sequence 2, the pacing interval from Electrode A is 300ms, so we have:
+$$ERP1+RRP1\leq 300ms$$
+In EGM sequence 3, the pacing interval is further reduced to 250ms, so we have:
+$$ERP1\leq 250ms$$
+We can see that by conducting experiments 
+
 
 
 \section{Heart Model Identification in Closed-loop Model Checking}
