--- a/B.tex
+++ b/B.tex
@@ -17,10 +17,10 @@ Models (especially environment models) should be designed in accordance with the
 In the following sections, we introduce the physiological context that the pacemaker operates in, and how to construct heart models for closed-loop verification of implantable pacemaker. Note that for two different applications the models are constructed differently as we address their respective requirements for environment models. 
 \begin{figure}[!t]
 \centering
-		\includegraphics[width=0.9  \textwidth]{figs/probes.png}
+		\includegraphics[width=0.9  \textwidth]{figs/egm.pdf}
 		
 %\vspace{-10pt}
-\caption{\small (a) Node automaton. Dotted transition is only valid for pacemaker tissue like SA node; (b) Path automaton; (c) Model of the electrical conduction system of the heart using a network of node \& path automata~\cite{vhm_ecrts10}.}
+\caption{\small }
 \label{fig:probes}
 %\vspace{-15pt}
 \end{figure} 
